--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         />
         <button>Log in</button>
     </form>
+    <h1 id="greeting" class= "hidden"></h1>
     <script src="app.js"></script>
+    <link rel="stylesheet" href="style.css">
 </body>
 </html>
