--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Momentum App</title>
 </head>
 <body>
-    <form id="login-form">
+    <form  class= "hidden" id="login-form">
     <input 
         required
         maxlength="15"
@@ -16,8 +16,17 @@
         />
         <button>Log in</button>
     </form>
+    <h2 id="clock">00:00</h2>
+    <h2 id="newclock">00:00</h2>
     <h1 id="greeting" class= "hidden"></h1>
-    <script src="app.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <div id= "quote">
+        <span></span>
+        <span></span>
+    </div>
+    <script src="js/greetings.js"></script>
+  <script src="js/clock.js"></script>
+  <script src="js/quotes.js"></script>
+  <script scr="js/background.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 </body>
 </html>
