--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <span></span>
         <span></span>
     </div>
-    <script src="js/greetings.js"></script>
-  <script src="js/clock.js"></script>
-  <script src="js/quotes.js"></script>
-  <script scr="js/background.js"></script>
+    <script src="./js/greetings.js"></script>
+  <script src="./js/clock.js"></script>
+  <script src="./js/quotes.js"></script>
+  <script scr="./js/background.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </body>
 </html>
