--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <span></span>
     </div>
     <script src="./js/greetings.js"></script>
-  <script src="./js/clock.js"></script>
-  <script src="./js/quotes.js"></script>
-  <script scr="./js/background.js"></script>
+  <script src="clock.js"></script>
+  <script src="quotes.js"></script>
+  <script scr="background.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </body>
 </html>
