--- a/index.html
+++ b/index.html
@@ -19,14 +19,19 @@
     <h2 id="clock">00:00</h2>
     <h2 id="newclock">00:00</h2>
     <h1 id="greeting" class= "hidden"></h1>
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter" required/>
+    </form>
+    <ul id="todo-list"></ul>
     <div id= "quote">
         <span></span>
         <span></span>
     </div>
-    <script src="./js/greetings.js"></script>
-  <script src="clock.js"></script>
-  <script src="quotes.js"></script>
-  <script scr="background.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <script src="js/greetings.js"></script>
+  <script src="js/clock.js"></script>
+  <script src="js/quotes.js"></script>
+  <script src="js/background.js"></script>
+  <script src="js/todo.js"></script>
+  <link rel="stylesheet" href="css/style.css">
 </body>
 </html>
