--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
   <script src="quotes.js"></script>
   <script src="background.js"></script>
   <script src="todo.js"></script>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </body>
 </html>
