--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <script src="quotes.js"></script>
   <script src="background.js"></script>
   <script src="todo.js"></script>
+  <script src="weather.js"></script>
   <link rel="stylesheet" href="style.css">
 </body>
 </html>
